[package]
name = "rodio"
version = "0.11.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback", "gamedev"]
repository = "https://github.com/RustAudio/rodio"
documentation = "http://docs.rs/rodio"
edition = "2018"

[dependencies]
cpal = { git = "https://github.com/RustAudio/cpal" }
claxon = { version = "0.4.3", optional = true }
hound = { version = "3.4.0", optional = true }
lewton = { version = "0.10.1", optional = true }
minimp3 = { version = "0.3.5", optional = true }

[features]
default = ["flac", "vorbis", "wav", "mp3"]

flac = ["claxon"]
vorbis = ["lewton"]
wav = ["hound"]
mp3 = ["minimp3"]
