[package]
name = "rodio"
version = "0.13.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback", "gamedev"]
repository = "https://github.com/RustAudio/rodio"
documentation = "http://docs.rs/rodio"
edition = "2018"

[dependencies]
claxon = { version = "0.4", optional = true }
hound = { version = "3.3", optional = true }
lewton = { version = "0.10", optional = true }
minimp3 = { version = "0.5", optional = true }

[dependencies.cpal]
git = "https://github.com/RustAudio/cpal"

[features]
default = ["flac", "vorbis", "wav", "mp3"]

flac = ["claxon"]
vorbis = ["lewton"]
wav = ["hound"]
mp3 = ["minimp3"]
wasm-bindgen = ["cpal/wasm-bindgen"]

[dev-dependencies]
quickcheck = "1.0"
